--- a/src/Components/EventPost/EventPost.css
+++ b/src/Components/EventPost/EventPost.css
@@ -18,6 +18,25 @@
   color:#888;
 }
 
+.EventPost .Banner { 
+  margin-top:15px;
+  margin-bottom: -30px;
+  width:390px;
+  height:60px;
+}
+
+@media (max-width: 768px) {
+    .EventPost .Banner {
+        width:351;
+        height:54px;
+    }
+}
+
+.EventPost h1 {
+    font-size: 1.2rem;
+    margin:5px;
+}
+
 .EventPost .ImgBox {
   background-color: rgba(0, 0, 0, 0.05);
   text-align: center;
@@ -38,4 +57,10 @@
   width:48px;
   height:48px;
   opacity: 0.5;
+}
+
+.EventPost .Link img {
+  width:48px;
+  height:48px;
+  margin:10px;
 }
