--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .Header {
-    background-color: #00B5AD;
+    background-color: #f2711c;
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 1.2rem;
     text-align: center;
     font-weight: 600;
