--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,42 +1,9 @@
-.HeaderBox {
-    background-color: #333333;
+.Header {
+    background-color: #f2711c;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    padding: 1.2rem;
     text-align: center;
     font-weight: 600;
-    height:48px;
-
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: flex;    
-
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    -webkit-align-items: center;
-    align-items: center;    
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 97;
-    background: #313131;
-}
-
-.HeaderL {
-    min-width: 80px;
-    margin-left:1em;
-}
-
-.HeaderC {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -webkit-flex: 1 1 auto;
-    flex: 1 1 auto;
-}
-
-.HeaderR {
-    min-width: 80px;
-    margin-right:1em;
+    margin-bottom: 2rem;
 }
